liberasurecode (1.2.0-1) UNRELEASED; urgency=medium

  * New upstream release
  * Standards-Version is 3.9.8 now (no change)

 -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:23:28 +0200

liberasurecode (1.1.0-5) unstable; urgency=medium

  * Debian tests fixies.
  * Added Suggests: libisal2.

 -- Ondřej Nový <novy@ondrej.org>  Tue, 01 Mar 2016 23:10:58 +0100

liberasurecode (1.1.0-4) unstable; urgency=medium

  * Added myself as uploader.
  * Added myself to copyright file.
  * Enabled additional hardening (hardening=+all).
  * Fixed Vcs URL (https).
  * Fixed order in d/copyright.
  * Standards-Version is 3.9.7 now (no change).
  * Added header to d/patches/reproducible-build.patch
  * Added Debian tests.
  * Removed shlibs substitution in dependency from liberasurecode-dev
  * Added Suggests: libjerasure2.

 -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 00:08:54 +0100

liberasurecode (1.1.0-3) unstable; urgency=medium

  * Added patch to make the build reproducible (Closes: #806577).

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Dec 2015 10:18:08 +0100

liberasurecode (1.1.0-2) unstable; urgency=medium

  * Drop manual dependency on libjerasure2. This "manual" dependency should
    never have been there, as it should be calculated by dh_shlibdeps, and
    also upstream confirms that this dep shouldn't be there at all anyway.

 -- Thomas Goirand <zigo@debian.org>  Fri, 13 Nov 2015 22:19:29 +0100

liberasurecode (1.1.0-1) unstable; urgency=medium

  [ James Page ]
  * d/rules: Support parallel builds.
  * d/control: Mark liberasurecode1 as Multi-Arch: same.

  [ Thomas Goirand ]
  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Tue, 10 Nov 2015 11:03:48 +0000

liberasurecode (1.0.8-3) unstable; urgency=medium

  * Team upload.
  * d/p/disable-sse.patch: Strip out liberasurecode specific configuration
    checks which are turning on CPU optimizations that are not supported
    on all CPU variants.
